--- a/index.html
+++ b/index.html
@@ -1,9 +1,22 @@
+<!DOCTYPE html>
 <html>
   <head>
-    <title>My blog</title>
+    <link rel="stylesheet" href="styles/main.css" />
+    <title>Ricky's Blog</title>
+  </head>
   <body>
-    <h1>Kia ora Taiao! (Hello World!)</h1> 
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+    <nav>
+      <a href="index.html"><h1 class="about-me">Ricky's Blog</h1></a>
+      <div class="nav-item">
+        <ul>
+          <li><a href="#">Reflections</a></li>
+          <li><a href="#">Te Houtaewa</a></li>
+          <li><a href="#">About me</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="">
+      <p>hello</p>
+    </div>
   </body>
 </html>
