add nav bar buttons

--- a/index.html
+++ b/index.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
     <title>Ricky's Blog</title>
   </head>
   <body>
     <nav>
-      <a href="index.html"><h1 class="about-me">Ricky's Blog</h1></a>
-      <div class="nav-item">
+      <a href="index.html"><h1 class="nav-logo">Ricky's Blog</h1></a>
+      <div class="nav-button-bar">
         <ul>
-          <li><a href="#">Reflections</a></li>
-          <li><a href="#">Te Houtaewa</a></li>
-          <li><a href="#">About me</a></li>
+          <li>
+            <a href="index.html" class="nav-button">Reflections</a>
+          </li>
+          <li>
+            <a href="#" class="nav-button">Te Houtaewa</a>
+          </li>
+          <li>
+            <a href="#" class="nav-button">About me</a>
+          </li>
         </ul>
       </div>
     </nav>
