update nav bar button

--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <title>Ricky's Blog</title>
   </head>
   <body>
     <nav>
-      <a href="index.html"><h1 class="nav-logo">Ricky's Blog</h1></a>
+      <a href="index.html" class="nav-logo">Ricky's Blog</a>
       <div class="nav-button-bar">
         <ul>
           <li>
@@ -22,8 +28,11 @@
         </ul>
       </div>
     </nav>
-    <div class="">
-      <p>hello</p>
+    <div class="main">
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
     </div>
   </body>
 </html>
