--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -12,22 +13,12 @@
     <title>Ricky's Blog</title>
   </head>
   <body>
-    <nav>
-      <a href="index.html" class="nav-logo">Ricky's Blog</a>
-      <div class="nav-button-bar">
-        <ul>
-          <li>
-            <a href="index.html" class="nav-button">Reflections</a>
-          </li>
-          <li>
-            <a href="#" class="nav-button">Te Houtaewa</a>
-          </li>
-          <li>
-            <a href="#" class="nav-button">About me</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+    <div class="navbar">
+      <a href="index.html" class="nav-button">Reflections</a>
+      <a href="#" class="nav-button">Te Houtaewa</a>
+      <a href="#" class="nav-button">About me</a>
+    </div>
+
     <div class="main">
       <p>
         My name is Ricky, <br />This webpage is work in progress and I hope to
