Revert "update nav bar button"
This reverts commit 58423ad133b72a711a8546aae859e0620e25dcb8.

--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
     <title>Ricky's Blog</title>
   </head>
   <body>
-    <div class="navbar">
-      <a href="index.html" class="nav-button">Reflections</a>
-      <a href="#" class="nav-button">Te Houtaewa</a>
-      <a href="#" class="nav-button">About me</a>
-    </div>
-
+    <nav>
+      <a href="index.html" class="nav-logo">Ricky's Blog</a>
+      <div class="nav-button-bar">
+        <ul>
+          <li>
+            <a href="index.html" class="nav-button">Reflections</a>
+          </li>
+          <li>
+            <a href="#" class="nav-button">Te Houtaewa</a>
+          </li>
+          <li>
+            <a href="#" class="nav-button">About me</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <div class="main">
       <p>
         My name is Ricky, <br />This webpage is work in progress and I hope to
