--- a/index.html
+++ b/index.html
@@ -7,23 +7,117 @@
     <title>Ricky's Blog</title>
   </head>
   <body>
-    <nav>
+    <div class="nav-bar">
       <a href="index.html" class="nav-logo">Ricky's Blog</a>
-      <div class="nav-button-bar">
-        <ul>
-          <li>
-            <a href="index.html" class="nav-button">Reflections</a>
-          </li>
-          <li>
-            <a href="#" class="nav-button">Te Houtaewa</a>
-          </li>
-          <li>
-            <a href="#" class="nav-button">About me</a>
-          </li>
-        </ul>
-      </div>
-    </nav>
+      <ul>
+        <li>
+          <a href="index.html" class="nav-links">Reflections</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links">Te Houtaewa</a>
+        </li>
+        <li>
+          <a href="#" class="nav-links">About me</a>
+        </li>
+      </ul>
+    </div>
     <div class="main">
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
+      <p>
+        My name is Ricky, <br />This webpage is work in progress and I hope to
+        improve it overtime.
+      </p>
       <p>
         My name is Ricky, <br />This webpage is work in progress and I hope to
         improve it overtime.
