working nav bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="styles/main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
+      rel="stylesheet"
+    />
     <title>Ricky's Blog</title>
   </head>
   <body>
@@ -21,103 +27,8 @@
         </li>
       </ul>
     </div>
+
     <div class="main">
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
-      <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
-      </p>
       <p>
         My name is Ricky, <br />This webpage is work in progress and I hope to
         improve it overtime.
