general stability update

--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
       <a href="index.html" class="nav-logo">Ricky's Blog</a>
       <ul>
         <li>
-          <a href="index.html" class="nav-links">Reflections</a>
+          <div class="dropdown">
+            <button class="dropdown-button">Reflections</button>
+            <div class="dropdown-content">
+              <a href="#">Sprint 1</a>
+              <a href="#">Sprint 2</a>
+              <a href="#">Sprint 3</a>
+              <a href="#">Sprint 4</a>
+              <a href="#">Sprint 5</a>
+              <a href="#">Sprint 6</a>
+            </div>
+          </div>
         </li>
         <li>
-          <a href="#" class="nav-links">Te Houtaewa</a>
+          <a href="#" class="nav-links">Tips and Tricks</a>
+        </li>
+        <li>
+          <a href="/blog/te-houtaewa-template.html" class="nav-links"
+            >Te Houtaewa</a
+          >
         </li>
         <li>
           <a href="#" class="nav-links">About me</a>
@@ -31,7 +46,7 @@
     <div class="main">
       <p>
         My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.
+        improve it overtime.<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       </p>
     </div>
   </body>
