--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
           <a href="#" class="nav-links">Tips and Tricks</a>
         </li>
         <li>
+          <a href="#" class="nav-links">Identity & Values</a>
+        </li>
+        <li>
           <a href="/blog/te-houtaewa-template.html" class="nav-links"
             >Te Houtaewa</a
           >
@@ -45,8 +48,7 @@
 
     <div class="main">
       <p>
-        My name is Ricky, <br />This webpage is work in progress and I hope to
-        improve it overtime.<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+        My name is Ricky, <br />This webpage is work in progress.<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       </p>
     </div>
   </body>
