--- a/index.html
+++ b/index.html
@@ -14,18 +14,58 @@
   </head>
   <body>
     <div class="nav-bar">
-      <a href="index.html" class="nav-logo">Ricky's Blog</a>
+      <a href="../index.html" class="nav-logo">Ricky's Blog</a>
       <ul>
         <li>
           <div class="dropdown">
-            <button class="dropdown-button">Reflections</button>
+            <button class="dropdown-button">Sprint 6</button>
+            <div class="dropdown-content">
+              <a href="#">Personal Project</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Sprint 5</button>
+            <div class="dropdown-content">
+              <a href="#">Foundations Reflection</a>
+              <a href="#"></a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Sprint 4</button>
+            <div class="dropdown-content">
+              <a href="#">Neuroplasticity</a>
+              <a href="#">Te Whare Tapa Wha</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Sprint 3</button>
+            <div class="dropdown-content">
+              <a href="#">Javascript Fundamentals</a>
+              <a href="#">Emotional Intelligence</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Sprint 2</button>
+            <div class="dropdown-content">
+              <a href="#">Sprint 2</a>
+              <a href="#">Identity, Values & Strengths</a>
+              <a href="#">Learning Plan</a>
+            </div>
+          </div>
+        </li>
+        <li>
+          <div class="dropdown">
+            <button class="dropdown-button">Sprint 1</button>
             <div class="dropdown-content">
               <a href="#">Sprint 1</a>
-              <a href="#">Sprint 2</a>
-              <a href="#">Sprint 3</a>
-              <a href="#">Sprint 4</a>
-              <a href="#">Sprint 5</a>
-              <a href="#">Sprint 6</a>
             </div>
           </div>
         </li>
@@ -33,15 +73,12 @@
           <a href="#" class="nav-links">Tips and Tricks</a>
         </li>
         <li>
-          <a href="#" class="nav-links">Identity & Values</a>
-        </li>
-        <li>
           <a href="/blog/te-houtaewa-template.html" class="nav-links"
             >Te Houtaewa</a
           >
         </li>
         <li>
-          <a href="#" class="nav-links">About me</a>
+          <a href="../index.html" class="nav-links">About me</a>
         </li>
       </ul>
     </div>
