--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
           <div class="dropdown">
             <button class="dropdown-button">Sprint 5</button>
             <div class="dropdown-content">
-              <a href="#">Foundations Reflection</a>
-              <a href="#"></a>
+              <a href="/blog/foundations-reflection.html"
+                >Foundations Reflection</a
+              >
             </div>
           </div>
         </li>
@@ -39,6 +40,7 @@
             <div class="dropdown-content">
               <a href="#">Neuroplasticity</a>
               <a href="#">Te Whare Tapa Wha</a>
+              <a href="/blog/problem-solving.html">Problem Solving</a>
             </div>
           </div>
         </li>
@@ -55,9 +57,8 @@
           <div class="dropdown">
             <button class="dropdown-button">Sprint 2</button>
             <div class="dropdown-content">
-              <a href="#">Sprint 2</a>
               <a href="#">Identity, Values & Strengths</a>
-              <a href="#">Learning Plan</a>
+              <a href="/blog/learning-plan.html">Learning Plan</a>
             </div>
           </div>
         </li>
@@ -65,28 +66,24 @@
           <div class="dropdown">
             <button class="dropdown-button">Sprint 1</button>
             <div class="dropdown-content">
-              <a href="#">Sprint 1</a>
+              <a href="/blog/te-houtaewa-template.html">Te Houtaewa</a>
             </div>
           </div>
         </li>
         <li>
           <a href="#" class="nav-links">Tips and Tricks</a>
         </li>
-        <li>
-          <a href="/blog/te-houtaewa-template.html" class="nav-links"
-            >Te Houtaewa</a
-          >
-        </li>
+        <li></li>
         <li>
           <a href="../index.html" class="nav-links">About me</a>
         </li>
       </ul>
     </div>
 
-    <div class="main">
+    <main>
       <p>
         My name is Ricky, <br />This webpage is work in progress.<br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
       </p>
-    </div>
+    </main>
   </body>
 </html>
